# fudd

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml
.github/workflows/: basic.yaml
benches/: all_benchmark.rs
data/UCI/: poker-hand.names
data/hu_nash_equilibrium/: holdemresources_hu_call.csv  holdemresources_hu_push.csv
data/pluribus_converted_logs/: pluribus_100.txt  pluribus_100b.txt  pluribus_101.txt  pluribus_101b.txt  pluribus_102.txt  pluribus_102b.txt  pluribus_103.txt  pluribus_103b.txt  pluribus_104.txt  pluribus_105.txt  pluribus_106.txt  pluribus_107.txt  pluribus_108.txt  pluribus_109.txt  pluribus_110.txt  pluribus_111.txt  pluribus_111b.txt  pluribus_112.txt  pluribus_112b.txt  pluribus_113.txt  pluribus_113b.txt  pluribus_114.txt  pluribus_114b.txt  pluribus_115.txt  pluribus_116.txt  pluribus_117.txt  pluribus_118.txt  pluribus_30.txt  pluribus_31.txt  pluribus_32.txt  pluribus_33.txt  pluribus_34.txt  pluribus_35.txt  pluribus_40.txt  pluribus_40b.txt  pluribus_41.txt  pluribus_41b.txt  pluribus_42.txt  pluribus_42b.txt  pluribus_43.txt  (+52 more)
examples/: all_possible.rs  bc.rs  bc5csv.rs  bc_hm.rs  bccsv.rs  bcrepl.rs  bitvec.rs  calc.rs  chen.rs  csv_serde_read.rs  csv_serde_rw.rs  eval_fixed.rs  hand.rs  holdem.rs  hup.rs  indexer.rs  millions.rs  omaha.rs  outs.rs  playout_deal.rs  poker_5card.rs  ranges.rs  rayon.rs  shorthand.rs  sled.rs  uci.rs
examples/retired/: ckc.rs  csv_serde_lazystatic.rs  csv_serde_rw.rs  hand.rs  heads_up.rs  hup2.rs  serde.rs  write-csv.rs
logs/: .gitignore  ODDS_AT_DEAL.md
src/: lib.rs
src/analysis/: chances.rs  count.rs  eval.rs  eval_7card.rs  evals.rs  evals_7card.rs  holdem_playout.rs  indexed.rs  mod.rs  outs.rs  seat_calc.rs
src/analysis/store/: mod.rs
src/analysis/store/holdem/: bcm.rs  heads_up_csv.rs  heads_up_odds.rs  heads_up_row.rs  mod.rs
src/games/: mod.rs  seat_name.rs
src/games/holdem/: board.rs  case_eval.rs  case_evals.rs  deal.rs  hand.rs  heads_up.rs  mod.rs  seat.rs  seat_eval.rs  seats.rs  table.rs
src/types/: card_slot.rs  mod.rs  playing_card.rs  playing_cards.rs  poker_cards.rs  poker_deck.rs  sample.rs
src/types/arrays/: card_array.rs  five_card.rs  five_cards.rs  four_card.rs  four_cards.rs  mod.rs  seven_card.rs  seven_cards.rs  six_card.rs  six_cards.rs  three_card.rs  three_cards.rs  two_card.rs  two_cards.rs
src/types/bitvec/: bit_card.rs  bit_cards.rs  mod.rs
src/types/ranges/: chen_weighted.rs  mod.rs  two_cards.rs  two_cards_set.rs  two_cards_vec.rs
src/types/slots/: flop.rs  hole_cards.rs  mod.rs  omaha_hand.rs  single_card.rs
src/util/: mod.rs  random_ordering.rs  uci.rs
