[package]
name = "fudd"
description = "Fun with poker"
version = "0.1.2"
authors = ["gaoler <gaoler@electronicpanopticon.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
exclude = [".github/workflows/*", "examples/*", ".gitignore", "Cargo.lock"]
repository = "https://github.com/ContractBridge/fudd.git"
homepage = "https://github.com/ContractBridge/fudd"

[lib]
name = "fudd"
path = "src/lib.rs"

[dependencies]
bitvec = "0.22.3"
cardpack = "0.4.14"
# ckc-rs = { git = "https://github.com/ContractBridge/ckc-rs", branch = "cards" }
ckc-rs = "0.1.7"
indexmap = "1.8.0"
itertools = "0.10.2"
log = "0.4.14"
rand = "0.8.4"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.23"
strum_macros = "0.23"
wyz = "0.5.0"

[dev-dependencies]
clap = { version = "3.0.10", features = ["derive", "unicode"] }
criterion = "0.3.5"
doc-comment = "0.3.3"
env_logger = "0.8.4"
rstest = "0.12.0"
serde_json = "1.0.74"
serde_test = "1.0.136"
serde_yaml = "0.8.23"
text_io = "0.1.9"
thousands = "0.2.0"

[[bench]]
name = "all_benchmark"
harness = false
