[package]
name = "fudd"
description = "Fun with poker"
version = "0.1.5"
authors = ["gaoler <gaoler@electronicpanopticon.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
exclude = [".github/workflows/*", "examples/*", ".gitignore", "Cargo.lock"]
repository = "https://github.com/ContractBridge/fudd.git"
homepage = "https://github.com/ContractBridge/fudd"

[lib]
name = "fudd"
path = "src/lib.rs"

[dependencies]
bitvec = "0.22.3"
cardpack = "0.4.14"
# ckc-rs = { git = "https://github.com/ContractBridge/ckc-rs", branch = "cards" }
ckc-rs = "0.1.13"
csv = "1.1.6"
indexmap = "1.8.0"
itertools = "0.10.2"
lazy_static = "1.4.0"
log = "0.4.16"
rand = "0.8.4"
rayon = "1.5.2"
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.24" , features = ["derive"]}
strum_macros = "0.24"
wincounter = "0.1.1"
wyz = "0.5.0"

[dev-dependencies]
clap = { version = "3.1.12", features = ["derive", "unicode"] }
criterion = "0.3.5"
doc-comment = "0.3.3"
env_logger = "0.9.0"
num-format = "0.4.0"
rstest = "0.12.0"
serde_json = "1.0.74"
serde_test = "1.0.136"
serde_yaml = "0.8.23"
sled = "0.34.7"
simplelog = { version = "^0.12.0", features = ["paris"] }
text_io = "0.1.9"
thousands = "0.2.0"

[[bench]]
name = "all_benchmark"
harness = false
